--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,8 @@ add_executable(Laborka main.cpp)
 
 option (USE_TRIGONOMETRY_DEGREE
 	"Czy argumentami funkcji trygonometrycznych maja byc stopnie" ON)
+option (BUILD_TESTS
+	"Czy budowac testy funkcji trygonometrycznych" ON)
 
 if (USE_TRIGONOMETRY_DEGREE)
 	include_directories ("${PROJECT_SOURCE_DIR}/Trygonometria")
@@ -17,3 +19,19 @@ configure_file (
 "${PROJECT_BINARY_DIR}/LaborkaConfig.h"
 )
 include_directories("${PROJECT_BINARY_DIR}")
+
+
+
+if (BUILD_TESTS)
+enable_testing()
+
+add_test (LaborkaPodstawowyTest Laborka)
+
+add_test (LaborkaWynikSin45 Laborka 45)
+set_tests_properties (LaborkaWynikSin45   PROPERTIES PASS_REGULAR_EXPRESSION "0[.,]7071")
+
+add_test (Laborka3sek Laborka)
+set_tests_properties (Laborka3sek
+PROPERTIES TIMEOUT 3)
+
+endif (BUILD_TESTS)
